--- a/requirements.txt
+++ b/requirements.txt
@@ -36,11 +36,11 @@ git+https://github.com/botswana-harvard/edc-subject-dashboard.git@develop#egg=ed
 git+https://github.com/botswana-harvard/edc-timepoint.git@develop#egg=edc_timepoint
 git+https://github.com/botswana-harvard/edc-visit-schedule.git@develop#egg=edc_visit_schedule
 git+https://github.com/botswana-harvard/edc-visit-tracking.git@develop#egg=edc_visit_tracking
-git+https://github.com/flourishbhp/flourish-child.git@develop#egg=flourish_child
+git+https://github.com/flourishbhp/flourish-child.git@fus#egg=flourish_child
 git+https://github.com/flourishbhp/flourish-child-validations.git@develop#egg=flourish_child_validations
-git+https://github.com/flourishbhp/flourish-caregiver.git@develop#egg=flourish_caregiver
-git+https://github.com/flourishbhp/flourish-dashboard.git@develop#egg=flourish_dashboard
-git+https://github.com/flourishbhp/flourish-visit-schedule.git@develop#egg=flourish_visit_schedule
+git+https://github.com/flourishbhp/flourish-caregiver.git@fup#egg=flourish_caregiver
+git+https://github.com/flourishbhp/flourish-dashboard.git@fus#egg=flourish_dashboard
+git+https://github.com/flourishbhp/flourish-visit-schedule.git@fus#egg=flourish_visit_schedule
 git+https://github.com/flourishbhp/flourish-follow.git@develop#egg=flourish_follow
 git+https://github.com/flourishbhp/flourish-reports.git@develop#egg=flourish_reports
 git+https://github.com/flourishbhp/flourish-form-validations.git@develop#egg=flourish_form_validations
