--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,4 +1,4 @@
-git+https://github.com/botswana-harvard/django-crypto-fields.git@develop4#egg=django-crypto-fields
+git+https://github.com/botswana-harvard/django-crypto-fields.git@develop#egg=django-crypto-fields
 git+https://github.com/botswana-harvard/django-revision.git@develop#egg=django-revision
 git+https://github.com/botswana-harvard/edc-action-item.git@develop#egg=edc-action-item
 git+https://github.com/botswana-harvard/edc-appointment.git@develop#egg=edc-appointment
