--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,7 @@ git+https://github.com/flourishbhp/flourish-metadata-rules@develop#egg=flourish_
 git+https://github.com/flourishbhp/flourish-labs@develop#egg=flourish_labs
 git+https://github.com/flourishbhp/flourish-calendar@develop#egg=flourish_calendar
 git+https://github.com/flourishbhp/pre-flourish-follow.git@develop#egg=pre_flourish_follow
+git+https://github.com/flourishbhp/flourish-facet.git@develop#egg=flourish_facet
 pypdfium2==3.8.0
 django_tables2
 django-crispy-forms==1.14.0
