--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -41,6 +41,7 @@ git+https://github.com/flourishbhp/flourish-child-validations.git@develop#egg=fl
 git+https://github.com/flourishbhp/flourish-caregiver.git@develop#egg=flourish-caregiver
 git+https://github.com/flourishbhp/flourish-dashboard.git@develop#egg=flourish-dashboard
 git+https://github.com/flourishbhp/flourish-visit-schedule.git@develop#egg=flourish-visit-schedule
+git+https://github.com/flourishbhp/flourish-facet.git@develop#egg=flourish_facet
 git+https://github.com/flourishbhp/flourish-follow.git@develop#egg=flourish-follow
 git+https://github.com/flourishbhp/flourish-reports.git@develop#egg=flourish-reports
 git+https://github.com/flourishbhp/flourish-form-validations.git@develop#egg=flourish-form-validations
