--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -36,23 +36,23 @@ git+https://github.com/botswana-harvard/edc-subject-dashboard.git@develop#egg=ed
 git+https://github.com/botswana-harvard/edc-timepoint.git@develop#egg=edc-timepoint
 git+https://github.com/botswana-harvard/edc-visit-schedule.git@develop#egg=edc-visit-schedule
 git+https://github.com/botswana-harvard/edc-visit-tracking.git@develop#egg=edc-visit-tracking
-git+https://github.com/flourishbhp/flourish-child.git@develop#egg=flourish-child
-git+https://github.com/flourishbhp/flourish-child-validations.git@develop#egg=flourish-child-validations
-git+https://github.com/flourishbhp/flourish-caregiver.git@develop#egg=flourish-caregiver
-git+https://github.com/flourishbhp/flourish-dashboard.git@develop#egg=flourish-dashboard
-git+https://github.com/flourishbhp/flourish-visit-schedule.git@develop#egg=flourish-visit-schedule
-git+https://github.com/flourishbhp/flourish-facet.git@develop#egg=flourish_facet
-git+https://github.com/flourishbhp/flourish-follow.git@develop#egg=flourish-follow
-git+https://github.com/flourishbhp/flourish-reports.git@develop#egg=flourish-reports
-git+https://github.com/flourishbhp/flourish-form-validations.git@develop#egg=flourish-form-validations
-git+https://github.com/flourishbhp/flourish-prn.git@develop#egg=flourish-prn
-git+https://github.com/flourishbhp/flourish-export.git@develop#egg=flourish-export
-git+https://github.com/flourishbhp/flourish-reference@develop#egg=flourish-reference
-git+https://github.com/flourishbhp/flourish-metadata-rules@develop#egg=flourish-metadata-rules
-git+https://github.com/flourishbhp/flourish-labs@develop#egg=flourish-labs
-git+https://github.com/flourishbhp/flourish-calendar@develop#egg=flourish-calendar
-git+https://github.com/flourishbhp/pre-flourish.git@develop#egg=pre-flourish
-git+https://github.com/flourishbhp/pre-flourish-follow.git@develop#egg=pre-flourish-follow
+-e /Users/ckgathi/source/flourish-child
+-e /Users/ckgathi/source/flourish-child-validations
+-e /Users/ckgathi/source/flourish-caregiver
+-e /Users/ckgathi/source/flourish-dashboard
+-e /Users/ckgathi/source/flourish-visit-schedule
+-e /Users/ckgathi/source/flourish-facet
+-e /Users/ckgathi/source/flourish-follow
+-e /Users/ckgathi/source/flourish-reports
+-e /Users/ckgathi/source/flourish-form-validations
+-e /Users/ckgathi/source/flourish-prn
+-e /Users/ckgathi/source/flourish-export
+-e /Users/ckgathi/source/flourish-reference
+-e /Users/ckgathi/source/flourish-metadata-rules
+-e /Users/ckgathi/source/flourish-labs
+-e /Users/ckgathi/source/flourish-calendar
+-e /Users/ckgathi/source/pre-flourish
+-e /Users/ckgathi/source/pre-flourish-follow
 django_q
 xlwt
 django-crispy-forms
